--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,8 @@ version: '3.8'
 
 services:
   telegram-bot:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: telegram_bot
-    restart: unless-stopped
     env_file:
       - .env
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: python runbot.py
+    restart: always
